# ProjectFIX-Edaction-auto

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATE.md  Dockerfile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TODO_NEXT.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  video.ts
migrations/: env.py
migrations/versions/: 05066ac3b094_add_feedback_notification_outbox.py  0a1b2c3d4e5f_add_discord_homework_spaces.py  0f1a2b3c4d5e_add_enrollment_access_notifications.py  1b2c3d4e5f6a_add_discord_student_links.py  20260714_01_add_submission_assignment.py  20260715_01_add_discord_invites.py  20260716_01_add_discord_invite_access_codes.py  20260718_01_widen_student_bot_state.py  20260720_01_add_telegram_questions.py  20260720_02_staff_question_reply_state.py  20260720_03_add_student_assigned_curator.py  20260720_04_add_telegram_question_attachments.py  24db613c0e55_add_student_bot_state.py  2c3d4e5f6a7b_add_discord_submission_sources.py  3d4e5f6a7b8c_split_student_streams.py  4e5f6a7b8c9d_enrich_discord_participants.py  5d85c88a25c0_add_submission_review_timestamp.py  5e2f14a8eecd_add_course_slug.py  5f6a7b8c9d0e_expand_discord_profiles.py  6a7b8c9d0e1f_add_discord_lesson_dispatches.py  7b8c9d0e1f2a_add_discord_questions.py  8c9d0e1f2a3b_add_enrollment_access_period.py  9c21d7b43a10_add_lesson_progress.py  b73ac912de40_add_lesson_reminders.py  (+8 more)
tests/: conftest.py  test_config.py  test_models.py  test_session.py
(+127 files in other folders)
