[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "course-platform"
version = "0.1.0"
description = "Educational Telegram bot and curator web panel"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "pyjwt>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pwdlib[argon2]>=0.2,<1",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.34,<1",
    "websockets>=15,<17",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["course_platform"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
